--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,13 @@ resolver = "2"
 members = ["beacon-api-client", "ethereum-consensus", "spec-gen", "spec-tests"]
 
 [workspace.dependencies]
-tokio = { version = "1.37.0", features = ["full"] }
+tokio = { version = "=1.41.1", features = ["full", "fs"] }
 tokio-stream = "0.1.15"
 tracing = "0.1"
-reqwest = { version = "0.11.10", default-features = false, features = ["json"] }
+reqwest = { version = "=0.12.12", default-features = false, features = ["json"] }
 url = "2.2.2"
-http = "0.2.7"
-mev-share-sse = { git = "https://github.com/paradigmxyz/mev-share-rs", rev = "9eb2b0138ab3202b9eb3af4b19c7b3bf40b0faa8", default-features = false }
+http = "=1.3.1"
+mev-share-sse = { git = "https://github.com/cristibctr/mev-share-rs", branch = "main", default-features = false }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.81"
 serde_yaml = "0.8"
@@ -56,3 +56,42 @@ quote = "1.0.18"
 clap = { version = "4.5.3", features = ["derive"] }
 convert_case = "0.6.0"
 walkdir = "2.3.3"
+interprocess = { version = "=2.2.2", default-features = false }
+
+[patch.crates-io]
+reqwest = { git = "https://github.com/cristibctr/reqwest", branch = "master" }
+socket2 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.5.8" }
+socket3 = { git = "https://github.com/cristibctr/socket2.git", branch = "v0.6.0", package = "socket2" }
+c-kzg = { git = "https://github.com/cristibctr/c-kzg-4844", branch = "v1.0.3"}
+tokio = { git = "https://github.com/cristibctr/tokio-wasix", branch = "wasix-1.41.1" }
+hyper-util = { git = "https://github.com/cristibctr/hyper-util", branch = "master" }
+interprocess = { git = "https://github.com/cristibctr/interprocess", branch = "main" }
+libc = { git = "https://github.com/cristibctr/libc-0.2.169", branch = "wasix-0.2.169" }
+alloy-consensus = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-eips = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-genesis = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-json-rpc = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-network = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-network-primitives = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-node-bindings = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-provider = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-pubsub = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-client = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-admin = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-anvil = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-beacon = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-debug = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-engine = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-eth = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-mev = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-trace = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-rpc-types-txpool = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-serde = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-signer = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-signer-local = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-transport = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-transport-http = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-transport-ipc = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+alloy-transport-ws = { git = "https://github.com/cristibctr/alloy", branch = "v0.9.2-wasix"}
+futures-utils-wasm = { git = "https://github.com/cristibctr/futures-utils-wasm", branch = "main" }
